@@ -1,3 +1,7 @@
+2006-09-14 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* JDBC push and pop local frames to avoid memory leaks.
+
 2006-08-03 Nicola Pero <nicola.pero@meta-innovation.com>
 
 	* SQLClient.m ([SQLClient -quoteString:]): Renamed local variable
